[gd_scene load_steps=5 format=4 uid="uid://dnn5xgxx8aglk"]

[ext_resource type="Script" path="res://scripts/Ui/LevelMenu.gd" id="1_3f1y5"]
[ext_resource type="TileSet" uid="uid://ljgluonchilw" path="res://resources/tile_set.tres" id="1_jtvlg"]
[ext_resource type="PackedScene" uid="uid://fo3jds8e5h66" path="res://scenes/levels/level_1.tscn" id="2_ok0q4"]
[ext_resource type="PackedScene" uid="uid://bsbsbck21jp8m" path="res://scenes/levels/level_2.tscn" id="3_7kt2k"]

[node name="Level Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3f1y5")
levels = Array[PackedScene]([ExtResource("2_ok0q4"), ExtResource("3_7kt2k"), null, null, null, null, null])

[node name="Background" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Background"]
tile_map_data = PackedByteArray("AAABAAMAAQAAAAMAAAACAAMAAQAAAAMAAAADAAMAAQAAAAMAAAAEAAMAAQAAAAMAAAAFAAMAAQAAAAMAAAAGAAMAAQAAAAMAAAAHAAMAAQAAAAMAAAAIAAMAAQAAAAMAAAAKAAMAAQAAAAMAAAALAAMAAQAAAAMAAAAMAAMAAQABAAQAAAANAAMAAQABAAQAAAAOAAMAAQABAAQAAAAPAAMAAQAAAAMAAAAQAAMAAQAAAAMAAAARAAMAAQAAAAMAAAASAAMAAQAAAAMAAAATAAMAAQAAAAMAAAABAAQAAQAAAAMAAAACAAQAAQAAAAMAAAADAAQAAQAAAAMAAAAEAAQAAQAAAAMAAAAFAAQAAQABAAQAAAAGAAQAAQAAAAMAAAAHAAQAAQAAAAMAAAAIAAQAAQAAAAMAAAAJAAQAAQAAAAMAAAAKAAQAAQABAAQAAAALAAQAAQABAAQAAAAMAAQAAQAAAAMAAAANAAQAAQAAAAMAAAAOAAQAAQABAAQAAAAPAAQAAQAAAAMAAAAQAAQAAQABAAQAAAARAAQAAQAAAAMAAAASAAQAAQAAAAMAAAATAAQAAQAAAAMAAAABAAIAAQAAAAMAAAACAAIAAQAAAAMAAAADAAIAAQAAAAMAAAAEAAIAAQAAAAMAAAAFAAIAAQAAAAMAAAAGAAIAAQAAAAMAAAAHAAIAAQAAAAMAAAAIAAIAAQAAAAMAAAAJAAIAAQAAAAMAAAAKAAIAAQAAAAMAAAALAAIAAQAAAAMAAAAMAAIAAQAAAAMAAAANAAIAAQAAAAMAAAAOAAIAAQAAAAMAAAAPAAIAAQAAAAMAAAAQAAIAAQAAAAMAAAARAAIAAQAAAAMAAAASAAIAAQAAAAMAAAATAAIAAQAAAAMAAAABAAEAAQAAAAMAAAACAAEAAQAAAAMAAAADAAEAAQAAAAMAAAAEAAEAAQAAAAMAAAAFAAEAAQAAAAMAAAAGAAEAAQAAAAMAAAAHAAEAAQAAAAMAAAAIAAEAAQAAAAMAAAAJAAEAAQAAAAMAAAAKAAEAAQAAAAMAAAALAAEAAQAAAAMAAAAMAAEAAQAAAAMAAAANAAEAAQAAAAMAAAAOAAEAAQAAAAMAAAAPAAEAAQAAAAMAAAAQAAEAAQAAAAMAAAARAAEAAQAAAAMAAAASAAEAAQAAAAMAAAATAAEAAQABAAMAAAABAAAAAQABAAIAAAACAAAAAQABAAIAAAADAAAAAQABAAIAAAAEAAAAAQABAAIAAAAFAAAAAQABAAIAAAAGAAAAAQABAAIAAAAHAAAAAQABAAIAAAAIAAAAAQABAAIAAAAJAAAAAQABAAIAAAAKAAAAAQABAAIAAAALAAAAAQABAAIAAAAMAAAAAQABAAIAAAANAAAAAQABAAIAAAAOAAAAAQABAAIAAAAPAAAAAQABAAIAAAAQAAAAAQABAAIAAAARAAAAAQABAAIAAAASAAAAAQABAAIAAAATAAAAAQACAAIAAAABAAUAAQAAAAMAAAACAAUAAQAAAAMAAAADAAUAAQAAAAMAAAAEAAUAAQAAAAMAAAAFAAUAAQABAAQAAAAGAAUAAQAAAAMAAAAHAAUAAQAAAAMAAAAIAAUAAQAAAAMAAAAJAAUAAQAAAAMAAAAKAAUAAQAAAAMAAAALAAUAAQAAAAMAAAAMAAUAAQAAAAMAAAANAAUAAQAAAAMAAAAOAAUAAQAAAAMAAAAPAAUAAQAAAAMAAAAQAAUAAQAAAAMAAAARAAUAAQAAAAMAAAASAAUAAQAAAAMAAAATAAUAAQAAAAMAAAABAAYAAQAAAAMAAAACAAYAAQAAAAMAAAADAAYAAQAAAAMAAAAEAAYAAQAAAAMAAAAFAAYAAQABAAQAAAAGAAYAAQAAAAMAAAAHAAYAAQAAAAMAAAAIAAYAAQAAAAMAAAAJAAYAAQAAAAMAAAAKAAYAAQAAAAMAAAALAAYAAQAAAAMAAAAMAAYAAQAAAAMAAAANAAYAAQAAAAMAAAAOAAYAAQAAAAMAAAAPAAYAAQABAAMAAAAQAAYAAQABAAMAAAARAAYAAQABAAMAAAASAAYAAQAAAAMAAAATAAYAAQAAAAMAAAABAAcAAQAAAAMAAAACAAcAAQAAAAMAAAADAAcAAQAAAAMAAAAEAAcAAQAAAAMAAAAFAAcAAQAAAAMAAAAGAAcAAQAAAAMAAAAHAAcAAQAAAAMAAAAIAAcAAQAAAAMAAAAJAAcAAQAAAAMAAAAKAAcAAQAAAAMAAAALAAcAAQAAAAMAAAAMAAcAAQAAAAMAAAANAAcAAQAAAAMAAAAOAAcAAQAAAAMAAAAPAAcAAQABAAMAAAAQAAcAAQABAAMAAAARAAcAAQABAAMAAAASAAcAAQABAAMAAAATAAcAAQAAAAMAAAABAAgAAQAAAAMAAAACAAgAAQAAAAMAAAADAAgAAQAAAAMAAAAEAAgAAQAAAAMAAAAFAAgAAQAAAAMAAAAGAAgAAQAAAAMAAAAHAAgAAQAAAAMAAAAIAAgAAQAAAAMAAAAJAAgAAQAAAAMAAAAKAAgAAQAAAAMAAAALAAgAAQAAAAMAAAAMAAgAAQAAAAMAAAANAAgAAQAAAAMAAAAOAAgAAQAAAAMAAAAPAAgAAQAAAAMAAAAQAAgAAQABAAMAAAARAAgAAQABAAMAAAASAAgAAQABAAMAAAATAAgAAQAAAAMAAAAAAAoAAQAAAAAAAAABAAoAAQABAAAAAAACAAoAAQABAAAAAAADAAoAAQABAAAAAAAEAAoAAQABAAAAAAAFAAoAAQABAAAAAAAGAAoAAQABAAAAAAAHAAoAAQABAAAAAAAIAAoAAQABAAAAAAAJAAoAAQABAAAAAAAKAAoAAQABAAAAAAALAAoAAQABAAAAAAAMAAoAAQABAAAAAAANAAoAAQABAAAAAAAOAAoAAQABAAAAAAAPAAoAAQABAAAAAAAQAAoAAQABAAAAAAARAAoAAQABAAAAAAASAAoAAQABAAAAAAATAAoAAQABAAAAAAAAAAsAAQAAAAEAAAABAAsAAQABAAEAAAACAAsAAQABAAEAAAADAAsAAQABAAEAAAAEAAsAAQABAAEAAAAFAAsAAQABAAEAAAAGAAsAAQABAAEAAAAHAAsAAQABAAEAAAAIAAsAAQABAAEAAAAJAAsAAQABAAEAAAAKAAsAAQABAAEAAAALAAsAAQABAAEAAAAMAAsAAQABAAEAAAANAAsAAQABAAEAAAAOAAsAAQABAAEAAAAPAAsAAQABAAEAAAAQAAsAAQABAAEAAAARAAsAAQABAAEAAAASAAsAAQABAAEAAAATAAsAAQACAAEAAAAAAAEAAQAAAAMAAAAAAAIAAQAAAAMAAAAAAAMAAQAAAAMAAAAAAAQAAQAAAAMAAAAAAAUAAQAAAAMAAAAAAAYAAQAAAAMAAAAAAAcAAQAAAAMAAAAAAAgAAQAAAAMAAAAAAAAAAQAAAAIAAAAAAAkAAQAAAAMAAAABAAkAAQAAAAMAAAACAAkAAQAAAAMAAAADAAkAAQAAAAMAAAAEAAkAAQAAAAMAAAAFAAkAAQAAAAMAAAAGAAkAAQAAAAMAAAAHAAkAAQAAAAMAAAAIAAkAAQAAAAMAAAAJAAkAAQAAAAMAAAAKAAkAAQAAAAMAAAALAAkAAQAAAAMAAAAMAAkAAQAAAAMAAAANAAkAAQAAAAMAAAAOAAkAAQAAAAMAAAAPAAkAAQAAAAMAAAAQAAkAAQABAAMAAAARAAkAAQABAAMAAAASAAkAAQABAAMAAAATAAkAAQAAAAMAAAAJAAMAAQAAAAMAAAA=")
tile_set = ExtResource("1_jtvlg")
metadata/_edit_lock_ = true

[node name="TileMapLayer2" type="TileMapLayer" parent="Background"]
visible = false
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAADAAMAAAAFAAMAAAACAAMAAAAEAAMAAAAEAAMAAAAFAAMAAAAFAAMAAAAFAAMAAAAGAAMAAAAFAAMAAAAHAAMAAAAEAAQAAAA=")
tile_set = ExtResource("1_jtvlg")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.7
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Level1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Level 3"

[node name="Level4" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Level 4"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Level5" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Level 5"

[node name="Level6" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Level 6"

[node name="Level7" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Level 7"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 75)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 95.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "Back"

[node name="TestButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 75)
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 170.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 35
text = "Test"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/Level1" to="." method="_goto_level_1"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Level2" to="." method="_goto_level_2"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Level3" to="." method="_goto_level_3"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Level4" to="." method="_goto_level_4"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/Level5" to="." method="_goto_level_5"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/Level6" to="." method="_goto_level_6"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/Level7" to="." method="_goto_level_7"]
[connection signal="button_up" from="BackButton" to="." method="_back_to_main_menu"]
[connection signal="button_up" from="TestButton" to="." method="_on_test_released"]
